# pidcat

./: .gitignore  README.md  build.py  changelog_config.json  pidcat.py  pyproject.toml  requirements.txt
.github/workflows/: build_installer.yml  publish_release_on_tag.yml
controller/: ConsoleWriter.py  FileWriter.py  Writer.py
model/: CliArgs.py  MockTTY.py  State.py
resources/: version_info.py
setup/: info.txt  setup.iss
utils/: terminalColors.py
