[project]
name = "pidcat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pillow==12.0.0",
    "pyinstaller==6.17.0",
]

[tool.tomlscript]
# Command to build the executable using PyInstaller
build = "uv run build.py -e"

# Command to clean the build directory
clean = "uv run build.py -c"

# Command to rebuild the executable
rebuild = "uv run build.py -r"

# Command to build the installer using Inno Setup Compiler
build-installer = "uv run build.py -b"

# Command to perform a full rebuild and create the installer
build-all = "uv run build.py -a"

# Command to install the application by running the generated installer
install = "uv run build.py -i"

# Command to perform a full rebuild, create the installer, and install the application
reinstall = "uv run build.py -R"

[tool.ruff]
line-length = 120
